# Solar-SEO-App-Production

./: README.md  e2b.Dockerfile
.github/workflows/: docker-image.yml
app/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
services/: pyproject.toml
